# workday-community-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.example  pyproject.toml
.claude/: settings.json
community_mcp/: __init__.py  auth.py  coveo_client.py  server.py
